# financial-tracker

./: .coverage  .env  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  database.db  entrypoint.sh  memory  pyproject.toml
.github/workflows/: pipeline.yaml
Tests/: conftest.py  test_auth.py  test_db.py  test_security.py  test_tasks.py  test_users.py
app/: app.py
app/controllers/: database.py  security.py
app/models/: schemas.py
app/routes/: auth.py  tasks.py  users.py
migrations/: env.py
src/app/: main.py
src/app/controllers/: database.py  security.py  settings.py
src/app/models/: models.py  schemas.py
src/app/routes/: auth.py  tasks.py  transactions.py  users.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py  test_tasks.py  test_transactions.py
